# sensoragg

./: README.rst  setup.cfg
sensoragg/: cli.py  i2c.py
sensoragg/sensors/: bmp085.py
