[metadata]
name = sensoragg
author = Gregory Haynes
author-email = greg@greghaynes.net
summary = Aggregate sensor data
description-file = README.rst
home-page = https://github.com/ibm-dev-incubator/sensoragg
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    sensoragg

[entry_points]
console_scripts =
    sensoragg = sensoragg.cli:main
